include_directories(../../../include)

add_executable(test_type_convert type_convert.c)
target_link_libraries(test_type_convert test_framework basedefine)
add_test(NAME test_type_convert COMMAND test_type_convert)

add_executable(test_type_convert_int16_to_int8_n type_convert_int16_to_int8_n.c)
target_link_libraries(test_type_convert_int16_to_int8_n test_framework basedefine)
add_test(NAME test_type_convert_int16_to_int8_n COMMAND test_type_convert_int16_to_int8_n)
set_tests_properties(test_type_convert_int16_to_int8_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int16_to_int8_p type_convert_int16_to_int8_p.c)
target_link_libraries(test_type_convert_int16_to_int8_p test_framework basedefine)
add_test(NAME test_type_convert_int16_to_int8_p COMMAND test_type_convert_int16_to_int8_p)
set_tests_properties(test_type_convert_int16_to_int8_p PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int32_to_int8_n type_convert_int32_to_int8_n.c)
target_link_libraries(test_type_convert_int32_to_int8_n test_framework basedefine)
add_test(NAME test_type_convert_int32_to_int8_n COMMAND test_type_convert_int32_to_int8_n)
set_tests_properties(test_type_convert_int32_to_int8_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int32_to_int8_p type_convert_int32_to_int8_p.c)
target_link_libraries(test_type_convert_int32_to_int8_p test_framework basedefine)
add_test(NAME test_type_convert_int32_to_int8_p COMMAND test_type_convert_int32_to_int8_p)
set_tests_properties(test_type_convert_int32_to_int8_p PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int64_to_int8_n type_convert_int64_to_int8_n.c)
target_link_libraries(test_type_convert_int64_to_int8_n test_framework basedefine)
add_test(NAME test_type_convert_int64_to_int8_n COMMAND test_type_convert_int64_to_int8_n)
set_tests_properties(test_type_convert_int64_to_int8_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int64_to_int8_p type_convert_int64_to_int8_p.c)
target_link_libraries(test_type_convert_int64_to_int8_p test_framework basedefine)
add_test(NAME test_type_convert_int64_to_int8_p COMMAND test_type_convert_int64_to_int8_p)
set_tests_properties(test_type_convert_int64_to_int8_p PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_uint8_to_int8 type_convert_uint8_to_int8.c)
target_link_libraries(test_type_convert_uint8_to_int8 test_framework basedefine)
add_test(NAME test_type_convert_uint8_to_int8 COMMAND test_type_convert_uint8_to_int8)
set_tests_properties(test_type_convert_uint8_to_int8 PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_uint16_to_int8 type_convert_uint16_to_int8.c)
target_link_libraries(test_type_convert_uint16_to_int8 test_framework basedefine)
add_test(NAME test_type_convert_uint16_to_int8 COMMAND test_type_convert_uint16_to_int8)
set_tests_properties(test_type_convert_uint16_to_int8 PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_uint32_to_int8 type_convert_uint32_to_int8.c)
target_link_libraries(test_type_convert_uint32_to_int8 test_framework basedefine)
add_test(NAME test_type_convert_uint32_to_int8 COMMAND test_type_convert_uint32_to_int8)
set_tests_properties(test_type_convert_uint32_to_int8 PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_uint64_to_int8 type_convert_uint64_to_int8.c)
target_link_libraries(test_type_convert_uint64_to_int8 test_framework basedefine)
add_test(NAME test_type_convert_uint64_to_int8 COMMAND test_type_convert_uint64_to_int8)
set_tests_properties(test_type_convert_uint64_to_int8 PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int32_to_int16_n type_convert_int32_to_int16_n.c)
target_link_libraries(test_type_convert_int32_to_int16_n test_framework basedefine)
add_test(NAME test_type_convert_int32_to_int16_n COMMAND test_type_convert_int32_to_int16_n)
set_tests_properties(test_type_convert_int32_to_int16_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int32_to_int16_p type_convert_int32_to_int16_p.c)
target_link_libraries(test_type_convert_int32_to_int16_p test_framework basedefine)
add_test(NAME test_type_convert_int32_to_int16_p COMMAND test_type_convert_int32_to_int16_p)
set_tests_properties(test_type_convert_int32_to_int16_p PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int64_to_int16_n type_convert_int64_to_int16_n.c)
target_link_libraries(test_type_convert_int64_to_int16_n test_framework basedefine)
add_test(NAME test_type_convert_int64_to_int16_n COMMAND test_type_convert_int64_to_int16_n)
set_tests_properties(test_type_convert_int64_to_int16_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int64_to_int16_p type_convert_int64_to_int16_p.c)
target_link_libraries(test_type_convert_int64_to_int16_p test_framework basedefine)
add_test(NAME test_type_convert_int64_to_int16_p COMMAND test_type_convert_int64_to_int16_p)
set_tests_properties(test_type_convert_int64_to_int16_p PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_uint16_to_int16 type_convert_uint16_to_int16.c)
target_link_libraries(test_type_convert_uint16_to_int16 test_framework basedefine)
add_test(NAME test_type_convert_uint16_to_int16 COMMAND test_type_convert_uint16_to_int16)
set_tests_properties(test_type_convert_uint16_to_int16 PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_uint32_to_int16 type_convert_uint32_to_int16.c)
target_link_libraries(test_type_convert_uint32_to_int16 test_framework basedefine)
add_test(NAME test_type_convert_uint32_to_int16 COMMAND test_type_convert_uint32_to_int16)
set_tests_properties(test_type_convert_uint32_to_int16 PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_uint64_to_int16 type_convert_uint64_to_int16.c)
target_link_libraries(test_type_convert_uint64_to_int16 test_framework basedefine)
add_test(NAME test_type_convert_uint64_to_int16 COMMAND test_type_convert_uint64_to_int16)
set_tests_properties(test_type_convert_uint64_to_int16 PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int64_to_int32_n type_convert_int64_to_int32_n.c)
target_link_libraries(test_type_convert_int64_to_int32_n test_framework basedefine)
add_test(NAME test_type_convert_int64_to_int32_n COMMAND test_type_convert_int64_to_int32_n)
set_tests_properties(test_type_convert_int64_to_int32_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int64_to_int32_p type_convert_int64_to_int32_p.c)
target_link_libraries(test_type_convert_int64_to_int32_p test_framework basedefine)
add_test(NAME test_type_convert_int64_to_int32_p COMMAND test_type_convert_int64_to_int32_p)
set_tests_properties(test_type_convert_int64_to_int32_p PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_uint32_to_int32 type_convert_uint32_to_int32.c)
target_link_libraries(test_type_convert_uint32_to_int32 test_framework basedefine)
add_test(NAME test_type_convert_uint32_to_int32 COMMAND test_type_convert_uint32_to_int32)
set_tests_properties(test_type_convert_uint32_to_int32 PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_uint64_to_int32 type_convert_uint64_to_int32.c)
target_link_libraries(test_type_convert_uint64_to_int32 test_framework basedefine)
add_test(NAME test_type_convert_uint64_to_int32 COMMAND test_type_convert_uint64_to_int32)
set_tests_properties(test_type_convert_uint64_to_int32 PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_uint64_to_int64 type_convert_uint64_to_int64.c)
target_link_libraries(test_type_convert_uint64_to_int64 test_framework basedefine)
add_test(NAME test_type_convert_uint64_to_int64 COMMAND test_type_convert_uint64_to_int64)
set_tests_properties(test_type_convert_uint64_to_int64 PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_uint16_to_uint8 type_convert_uint16_to_uint8.c)
target_link_libraries(test_type_convert_uint16_to_uint8 test_framework basedefine)
add_test(NAME test_type_convert_uint16_to_uint8 COMMAND test_type_convert_uint16_to_uint8)
set_tests_properties(test_type_convert_uint16_to_uint8 PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_uint32_to_uint8 type_convert_uint32_to_uint8.c)
target_link_libraries(test_type_convert_uint32_to_uint8 test_framework basedefine)
add_test(NAME test_type_convert_uint32_to_uint8 COMMAND test_type_convert_uint32_to_uint8)
set_tests_properties(test_type_convert_uint32_to_uint8 PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_uint64_to_uint8 type_convert_uint64_to_uint8.c)
target_link_libraries(test_type_convert_uint64_to_uint8 test_framework basedefine)
add_test(NAME test_type_convert_uint64_to_uint8 COMMAND test_type_convert_uint64_to_uint8)
set_tests_properties(test_type_convert_uint64_to_uint8 PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int8_to_uint8_n type_convert_int8_to_uint8_n.c)
target_link_libraries(test_type_convert_int8_to_uint8_n test_framework basedefine)
add_test(NAME test_type_convert_int8_to_uint8_n COMMAND test_type_convert_int8_to_uint8_n)
set_tests_properties(test_type_convert_int8_to_uint8_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int16_to_uint8_p type_convert_int16_to_uint8_p.c)
target_link_libraries(test_type_convert_int16_to_uint8_p test_framework basedefine)
add_test(NAME test_type_convert_int16_to_uint8_p COMMAND test_type_convert_int16_to_uint8_p)
set_tests_properties(test_type_convert_int16_to_uint8_p PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int16_to_uint8_n type_convert_int16_to_uint8_n.c)
target_link_libraries(test_type_convert_int16_to_uint8_n test_framework basedefine)
add_test(NAME test_type_convert_int16_to_uint8_n COMMAND test_type_convert_int16_to_uint8_n)
set_tests_properties(test_type_convert_int16_to_uint8_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int32_to_uint8_p type_convert_int32_to_uint8_p.c)
target_link_libraries(test_type_convert_int32_to_uint8_p test_framework basedefine)
add_test(NAME test_type_convert_int32_to_uint8_p COMMAND test_type_convert_int32_to_uint8_p)
set_tests_properties(test_type_convert_int32_to_uint8_p PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int32_to_uint8_n type_convert_int32_to_uint8_n.c)
target_link_libraries(test_type_convert_int32_to_uint8_n test_framework basedefine)
add_test(NAME test_type_convert_int32_to_uint8_n COMMAND test_type_convert_int32_to_uint8_n)
set_tests_properties(test_type_convert_int32_to_uint8_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int64_to_uint8_p type_convert_int64_to_uint8_p.c)
target_link_libraries(test_type_convert_int64_to_uint8_p test_framework basedefine)
add_test(NAME test_type_convert_int64_to_uint8_p COMMAND test_type_convert_int64_to_uint8_p)
set_tests_properties(test_type_convert_int64_to_uint8_p PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int64_to_uint8_n type_convert_int64_to_uint8_n.c)
target_link_libraries(test_type_convert_int64_to_uint8_n test_framework basedefine)
add_test(NAME test_type_convert_int64_to_uint8_n COMMAND test_type_convert_int64_to_uint8_n)
set_tests_properties(test_type_convert_int64_to_uint8_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_uint32_to_uint16 type_convert_uint32_to_uint16.c)
target_link_libraries(test_type_convert_uint32_to_uint16 test_framework basedefine)
add_test(NAME test_type_convert_uint32_to_uint16 COMMAND test_type_convert_uint32_to_uint16)
set_tests_properties(test_type_convert_uint32_to_uint16 PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_uint64_to_uint16 type_convert_uint64_to_uint16.c)
target_link_libraries(test_type_convert_uint64_to_uint16 test_framework basedefine)
add_test(NAME test_type_convert_uint64_to_uint16 COMMAND test_type_convert_uint64_to_uint16)
set_tests_properties(test_type_convert_uint64_to_uint16 PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int8_to_uint16_n type_convert_int8_to_uint16_n.c)
target_link_libraries(test_type_convert_int8_to_uint16_n test_framework basedefine)
add_test(NAME test_type_convert_int8_to_uint16_n COMMAND test_type_convert_int8_to_uint16_n)
set_tests_properties(test_type_convert_int8_to_uint16_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int16_to_uint16_n type_convert_int16_to_uint16_n.c)
target_link_libraries(test_type_convert_int16_to_uint16_n test_framework basedefine)
add_test(NAME test_type_convert_int16_to_uint16_n COMMAND test_type_convert_int16_to_uint16_n)
set_tests_properties(test_type_convert_int16_to_uint16_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int32_to_uint16_p type_convert_int32_to_uint16_p.c)
target_link_libraries(test_type_convert_int32_to_uint16_p test_framework basedefine)
add_test(NAME test_type_convert_int32_to_uint16_p COMMAND test_type_convert_int32_to_uint16_p)
set_tests_properties(test_type_convert_int32_to_uint16_p PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int32_to_uint16_n type_convert_int32_to_uint16_n.c)
target_link_libraries(test_type_convert_int32_to_uint16_n test_framework basedefine)
add_test(NAME test_type_convert_int32_to_uint16_n COMMAND test_type_convert_int32_to_uint16_n)
set_tests_properties(test_type_convert_int32_to_uint16_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int64_to_uint16_p type_convert_int64_to_uint16_p.c)
target_link_libraries(test_type_convert_int64_to_uint16_p test_framework basedefine)
add_test(NAME test_type_convert_int64_to_uint16_p COMMAND test_type_convert_int64_to_uint16_p)
set_tests_properties(test_type_convert_int64_to_uint16_p PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int64_to_uint16_n type_convert_int64_to_uint16_n.c)
target_link_libraries(test_type_convert_int64_to_uint16_n test_framework basedefine)
add_test(NAME test_type_convert_int64_to_uint16_n COMMAND test_type_convert_int64_to_uint16_n)
set_tests_properties(test_type_convert_int64_to_uint16_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_uint64_to_uint32 type_convert_uint64_to_uint32.c)
target_link_libraries(test_type_convert_uint64_to_uint32 test_framework basedefine)
add_test(NAME test_type_convert_uint64_to_uint32 COMMAND test_type_convert_uint64_to_uint32)
set_tests_properties(test_type_convert_uint64_to_uint32 PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int8_to_uint32_n type_convert_int8_to_uint32_n.c)
target_link_libraries(test_type_convert_int8_to_uint32_n test_framework basedefine)
add_test(NAME test_type_convert_int8_to_uint32_n COMMAND test_type_convert_int8_to_uint32_n)
set_tests_properties(test_type_convert_int8_to_uint32_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int16_to_uint32_n type_convert_int16_to_uint32_n.c)
target_link_libraries(test_type_convert_int16_to_uint32_n test_framework basedefine)
add_test(NAME test_type_convert_int16_to_uint32_n COMMAND test_type_convert_int16_to_uint32_n)
set_tests_properties(test_type_convert_int16_to_uint32_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int32_to_uint32_n type_convert_int32_to_uint32_n.c)
target_link_libraries(test_type_convert_int32_to_uint32_n test_framework basedefine)
add_test(NAME test_type_convert_int32_to_uint32_n COMMAND test_type_convert_int32_to_uint32_n)
set_tests_properties(test_type_convert_int32_to_uint32_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int64_to_uint32_p type_convert_int64_to_uint32_p.c)
target_link_libraries(test_type_convert_int64_to_uint32_p test_framework basedefine)
add_test(NAME test_type_convert_int64_to_uint32_p COMMAND test_type_convert_int64_to_uint32_p)
set_tests_properties(test_type_convert_int64_to_uint32_p PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int64_to_uint32_n type_convert_int64_to_uint32_n.c)
target_link_libraries(test_type_convert_int64_to_uint32_n test_framework basedefine)
add_test(NAME test_type_convert_int64_to_uint32_n COMMAND test_type_convert_int64_to_uint32_n)
set_tests_properties(test_type_convert_int64_to_uint32_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int8_to_uint64_n type_convert_int8_to_uint64_n.c)
target_link_libraries(test_type_convert_int8_to_uint64_n test_framework basedefine)
add_test(NAME test_type_convert_int8_to_uint64_n COMMAND test_type_convert_int8_to_uint64_n)
set_tests_properties(test_type_convert_int8_to_uint64_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int16_to_uint64_n type_convert_int16_to_uint64_n.c)
target_link_libraries(test_type_convert_int16_to_uint64_n test_framework basedefine)
add_test(NAME test_type_convert_int16_to_uint64_n COMMAND test_type_convert_int16_to_uint64_n)
set_tests_properties(test_type_convert_int16_to_uint64_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int32_to_uint64_n type_convert_int32_to_uint64_n.c)
target_link_libraries(test_type_convert_int32_to_uint64_n test_framework basedefine)
add_test(NAME test_type_convert_int32_to_uint64_n COMMAND test_type_convert_int32_to_uint64_n)
set_tests_properties(test_type_convert_int32_to_uint64_n PROPERTIES WILL_FAIL TRUE)

add_executable(test_type_convert_int64_to_uint64_n type_convert_int64_to_uint64_n.c)
target_link_libraries(test_type_convert_int64_to_uint64_n test_framework basedefine)
add_test(NAME test_type_convert_int64_to_uint64_n COMMAND test_type_convert_int64_to_uint64_n)
set_tests_properties(test_type_convert_int64_to_uint64_n PROPERTIES WILL_FAIL TRUE)

